--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -84,9 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-# sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = postgresql+psycopg2://postgres:root@localhost:5432/AutoViz
-
+sqlalchemy.url = postgresql+asyncpg://postgres:root@localhost:5432/AutoViz
 
 
 [post_write_hooks]
