--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@babel/standalone": "^7.28.3",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-spinners": "^0.17.0",
     "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "three": "^0.179.1"
