--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/standalone": "^7.28.3",
+    "@babel/standalone": "^7.28.5",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
     "axios": "^1.12.2",
@@ -18,6 +18,7 @@
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-live": "^4.1.8",
     "react-router-dom": "^7.8.2",
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.2",
